# navigation_robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav_robot_simulation/share/nav_robot_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_robot_simulation/share/nav_robot_simulation/launch/: nav_robot_simulation.launch.py
install/nav_robot_simulation/share/nav_robot_simulation/models/: my_robot.urdf
install/nav_robot_simulation/share/nav_robot_simulation/worlds/: my_world.world
log/: latest_build
src/nav_robot_simulation/: CMakeLists.txt  setup.cfg  setup.py
src/nav_robot_simulation/models/wheeled_robot/: model.config  model.sdf
src/nav_robot_simulation/worlds/: another_world  new_world  robot_world  test_world
